# the-minimal-web-browser

./: CMakeLists.txt  README.md
assets/: README.html  start-page.html
src/: Browser.cpp  UI.cpp
